--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
 </head>
 <body>
     <p>Rock Paper Scissors Game</p>
-    <button>Rock</button>
+    <button onclick="
+    const randomNumber = (Math.random());
+    let computerMove = ''
+
+    if (randomNumber>=0 && randomNumber <1/3) {
+
+        computerMove = 'Rock';
+         
+    }else if (randomNumber >= 1/3 && 2/3){
+        computerMove = 'Paper';
+    } else if (randomNumber >= 2/3 && randomNumber< 1){
+        computerMove = 'Scissors';
+    }
+     
+    console.log(computerMove)
+    let result ='';
+    if (computerMove=== 'Rock'){
+
+        result ='Tie';
+
+    } else if (computerMove=== 'Paper'){
+        result = 'You Lose';
+    } else if (computerMove=== 'Scissors'){
+        result= 'You Win';
+    }
+    alert(` You picked Rock. Computer Picked ${computerMove}. ${result}`);
+    ">Rock</button>
     <button>Paper</button>
     <button>Scissors</button>
 
