--- a/index.html
+++ b/index.html
@@ -34,7 +34,36 @@
     }
     alert(` You picked Rock. Computer Picked ${computerMove}. ${result}`);
     ">Rock</button>
-    <button>Paper</button>
+
+
+<button onclick="
+const randomNumber = Math.random();
+
+let computerMove = '';
+
+if (randomNumber >= 0 && randomNumber < 1 / 3) {
+  computerMove = 'rock';
+} else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+  computerMove = 'paper';
+} else if (randomNumber >= 2 / 3 && randomNumber < 1) {
+  computerMove = 'scissors';
+}
+
+let result = '';
+
+if (computerMove === 'rock') {
+  result = 'You win.';
+} else if (computerMove === 'paper') {
+  result = 'Tie.';
+} else if (computerMove === 'scissors') {
+  result = 'You lose.';
+}
+
+alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+">Paper</button>
+
+
+
     <button>Scissors</button>
 
 
