--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock-Paper-Scissors Game</title>
+    <title>Rock Paper Scissors Game</title>
 </head>
 <body>
     <p>Rock Paper Scissors Game</p>
     <button onclick="
     const randomNumber = (Math.random());
-    let computerMove = ''
+    let computerMove = '';
 
     if (randomNumber>=0 && randomNumber <1/3) {
 
         computerMove = 'Rock';
          
-    }else if (randomNumber >= 1/3 && 2/3){
+    }else if (randomNumber >= 1/3 && randomNumber < 2/3){
         computerMove = 'Paper';
     } else if (randomNumber >= 2/3 && randomNumber< 1){
         computerMove = 'Scissors';
