--- a/index.html
+++ b/index.html
@@ -63,8 +63,31 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
 ">Paper</button>
 
 
+<button onclick="
+      const randomNumber = Math.random();
 
-    <button>Scissors</button>
+      let computerMove = '';
+
+      if (randomNumber >= 0 && randomNumber < 1 / 3) {
+        computerMove = 'rock';
+      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+        computerMove = 'paper';
+      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
+        computerMove = 'scissors';
+      }
+
+      let result = '';
+
+      if (computerMove === 'rock') {
+        result = 'You lose.';
+      } else if (computerMove === 'paper') {
+        result = 'You win.';
+      } else if (computerMove === 'scissors') {
+        result = 'Tie.';
+      }
+
+      alert(`You picked scissors. Computer picked ${computerMove}. ${result}`);
+    ">Scissors</button>
 
 
     <script>
