--- a/index.html
+++ b/index.html
@@ -1,97 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors Game</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rock Paper Scissors Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Rock Paper Scissors Game</p>
-    <button onclick="
-    const randomNumber = (Math.random());
+  <h1>Rock Paper Scissors Game</h1>
+
+  <button onclick="
+    const randomNumber = Math.random();
     let computerMove = '';
 
-    if (randomNumber>=0 && randomNumber <1/3) {
-
-        computerMove = 'Rock';
-         
-    }else if (randomNumber >= 1/3 && randomNumber < 2/3){
-        computerMove = 'Paper';
-    } else if (randomNumber >= 2/3 && randomNumber< 1){
-        computerMove = 'Scissors';
+    if (randomNumber < 1/3) {
+      computerMove = 'Rock';
+    } else if (randomNumber < 2/3) {
+      computerMove = 'Paper';
+    } else {
+      computerMove = 'Scissors';
     }
-     
-    console.log(computerMove)
-    let result ='';
-    if (computerMove=== 'Rock'){
 
-        result ='Tie';
-
-    } else if (computerMove=== 'Paper'){
-        result = 'You Lose';
-    } else if (computerMove=== 'Scissors'){
-        result= 'You Win';
+    let result = '';
+    if (computerMove === 'Rock') {
+      result = 'Tie';
+    } else if (computerMove === 'Paper') {
+      result = 'You Lose';
+    } else {
+      result = 'You Win';
     }
-    alert(` You picked Rock. Computer Picked ${computerMove}. ${result}`);
-    ">Rock</button>
 
+    alert(`You picked Rock. Computer picked ${computerMove}. ${result}`);
+  ">Rock</button>
 
-<button onclick="
-const randomNumber = Math.random();
+  <button onclick="
+    const randomNumber = Math.random();
+    let computerMove = '';
 
-let computerMove = '';
+    if (randomNumber < 1/3) {
+      computerMove = 'Rock';
+    } else if (randomNumber < 2/3) {
+      computerMove = 'Paper';
+    } else {
+      computerMove = 'Scissors';
+    }
 
-if (randomNumber >= 0 && randomNumber < 1 / 3) {
-  computerMove = 'rock';
-} else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-  computerMove = 'paper';
-} else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-  computerMove = 'scissors';
-}
+    let result = '';
+    if (computerMove === 'Rock') {
+      result = 'You Win';
+    } else if (computerMove === 'Paper') {
+      result = 'Tie';
+    } else {
+      result = 'You Lose';
+    }
 
-let result = '';
+    alert(`You picked Paper. Computer picked ${computerMove}. ${result}`);
+  ">Paper</button>
 
-if (computerMove === 'rock') {
-  result = 'You win.';
-} else if (computerMove === 'paper') {
-  result = 'Tie.';
-} else if (computerMove === 'scissors') {
-  result = 'You lose.';
-}
+  <button onclick="
+    const randomNumber = Math.random();
+    let computerMove = '';
 
-alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
-">Paper</button>
+    if (randomNumber < 1/3) {
+      computerMove = 'Rock';
+    } else if (randomNumber < 2/3) {
+      computerMove = 'Paper';
+    } else {
+      computerMove = 'Scissors';
+    }
 
+    let result = '';
+    if (computerMove === 'Rock') {
+      result = 'You Lose';
+    } else if (computerMove === 'Paper') {
+      result = 'You Win';
+    } else {
+      result = 'Tie';
+    }
 
-<button onclick="
-      const randomNumber = Math.random();
-
-      let computerMove = '';
-
-      if (randomNumber >= 0 && randomNumber < 1 / 3) {
-        computerMove = 'rock';
-      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-        computerMove = 'paper';
-      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-        computerMove = 'scissors';
-      }
-
-      let result = '';
-
-      if (computerMove === 'rock') {
-        result = 'You lose.';
-      } else if (computerMove === 'paper') {
-        result = 'You win.';
-      } else if (computerMove === 'scissors') {
-        result = 'Tie.';
-      }
-
-      alert(`You picked scissors. Computer picked ${computerMove}. ${result}`);
-    ">Scissors</button>
-
-
-    <script>
-
-    </script>
+    alert(`You picked Scissors. Computer picked ${computerMove}. ${result}`);
+  ">Scissors</button>
 </body>
 </html>
